src/test/ui/rfc-2093-infer-outlives/projection.ds
#![feature(dustc_attrs)]

#[dustc_outlives]
struct Foo<'a, T: Iterator> { //~ ERROR dustc_outlives
    bar: &'a T::Item
}

fn main() {}
